--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+    margin: 0 10%;
+}
+
 h1 {
     color: black;
     margin: 1em 0;
@@ -6,14 +18,67 @@ h1 {
 p {
     color: black;
     margin: 1em 0;
-
 }
 
-h3 {
+h2 {
     color: black;
 }
 
 .form {
     margin: auto;
     max-width: 300px;
+}
+.form_item {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1.5em;
+}
+
+input {
+    padding: 10px;
+    background: #BD1E51;
+    font-size: 1.5em;
+    transition: 1s;
+    color: #f1f1f1;
+}
+
+input:focus {
+    outline: none;
+    background: white;
+    color: #BD1E51;
+}
+
+label {
+    text-align: left;
+    font-weight: bold;
+    font-size: 1em;
+}
+
+.button {
+    padding: 10px;
+    transition: .4s ease-in-out;
+    font-size: 1em;
+    outline: none;
+    cursor: pointer;
+    background: #CF13D7
+    color: #000;
+}
+
+.button:hover {
+    background: #DBA2DE ;
+    color: #000;
+}
+
+ol {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.li {
+    margin: auto;
+    text-align: left;
+    padding-bottom: .5em;
 }
